<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="application_name_swe">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="browser_tab_crash_snap">Oops, Snap !</string>
    <string name="browser_tab_crash_reload">Reload</string>
    <string name="browser_tab_crash_message">
        Something unexpected happened when displaying this webpage.
        Please reload or go to another page.
    </string>
    <string name="new_incognito_tab">Private Browsing</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks.</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_add_page">Save bookmark</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="config_carrier_resource">default</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="max_url_character_limit_msg">Max URL limit reached</string>
    <string name="msg_no_google_play">Sorry, Google Play store app does not exist.</string>
    <string name="page_info">Page information</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_go_back">Go back</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Select folder...</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save to bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Bookmarked</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">"Bookmark must have a name."</string>
    <string name="history">History</string>
    <string name="pref_content_title">Content settings</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_security_allow_popups">Pop ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_open_in_background_summary">Open new tabs behind the current tab</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_content_search_engine_summary">Choose a search engine</string>
    <string name="pref_general_title">General</string>
    <string name="pref_default_site_settings_title">Default Site Settings</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_autofill_profile_editor">Auto-fill text</string>
    <string name="pref_autofill_profile_editor_summary">Set up text to auto-fill in web forms</string>
    <string name="pref_privacy_security_title">Privacy &amp; security</string>
    <string name="pref_privacy_clear_selected">Clear selected items</string>
    <string name="pref_privacy_clear_selected_summary">Clear selected items in the list</string>
    <string name="pref_privacy_clear_selected_dlg">Clear following items?</string>
    <string name="pref_privacy_clear_cache">Cache</string>
    <string name="pref_privacy_clear_cache_summary">Clear locally cached content and databases</string>
    <string name="pref_privacy_clear_cookies">Cookies and Site Data</string>
    <string name="pref_privacy_clear_cookies_summary">Clear all browser cookies and site data</string>
    <string name="pref_privacy_clear_history">History</string>
    <string name="pref_privacy_clear_history_summary">Clear the browser navigation history</string>
    <string name="pref_privacy_clear_form_data">Form data</string>
    <string name="pref_privacy_clear_form_data_summary">Clear all saved form data</string>
    <string name="pref_privacy_clear_passwords">Passwords</string>
    <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
    <string name="pref_privacy_enable_geolocation">Location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_privacy_clear_geolocation_access">Location access</string>
    <string name="pref_privacy_clear_geolocation_access_summary">Clear location access for all websites</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save usernames and passwords for websites</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember data I type in forms for later use</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">Show warning if there\'s a problem with a site\'s security</string>
    <string name="pref_do_not_track">Request \'Do Not Track\'</string>
    <string name="pref_do_not_track_summary">Send a Do Not Track request with your browsing traffic</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read cookie data</string>
    <string name="pref_security_allow_mic">Microphone</string>
    <string name="pref_security_allow_camera">Camera</string>
    <string name="pref_security_web_refiner">Ads and distracting content</string>
    <string name="pref_security_accept_third_party_cookies">Third party cookies</string>
    <string name="pref_security_ask_before_using">Ask before using</string>
    <string name="pref_security_allowed">Allowed</string>
    <string name="pref_security_not_allowed">Not allowed</string>
    <string name="pref_security_remember">Remember</string>
    <string name="pref_security_on">On</string>
    <string name="pref_security_off">Off</string>
    <string name="pref_min_font_size">Minimum font size</string>
    <string name="pref_text_zoom">Text scaling</string>
    <string name="pref_force_userscalable">Force enable zoom</string>
    <string name="pref_force_userscalable_summary">Override a website\'s request to control zoom behavior</string>
    <string name="pref_default_zoom">Default zoom</string>
    <string name="pref_default_zoom_dialogtitle">Default zoom</string>
    <string name="pref_extras_title">Advanced</string>
    <string name="pref_extras_website_settings">Per site settings</string>
    <string name="pref_extras_website_settings_summary">Advanced settings for individual websites</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_extras_reset_default_summary">Restore default settings</string>
    <string name="pref_extras_reset_default_dlg">Revert settings to default values?</string>
    <string name="pref_development_title">Debug</string>
    <string name="pref_development_viewport" translatable="false">Use wide viewport</string>
    <string name="pref_development_single_column_rendering" translatable="false">Single column rendering</string>
    <string name="pref_development_normal_rendering" translatable="false">Normal rendering</string>
    <string name="pref_development_trace" translatable="false">Enable tracing</string>
    <string name="pref_development_nav_dump" translatable="false">Enable nav cache dump</string>
    <string name="pref_development_hardware_accel" translatable="false">Enable OpenGL Rendering</string>
    <string name="pref_development_hardware_accel_skia" translatable="false">Enable HW Accelerated Skia</string>
    <string name="pref_development_visual_indicator" translatable="false">Enable Visual Indicator</string>
    <string name="pref_development_cpu_upload_path" translatable="false">Enable Cpu Upload Path</string>
    <string name="pref_development_disable_perf"
        translatable="false">High Performance features</string>
    <string name="pref_development_disable_perf_on"
        translatable="false">WebRefiner, WebAccelerator, EdgeNavigation enabled</string>
    <string name="pref_development_disable_perf_off"
        translatable="false">WebRefiner, WebAccelerator, EdgeNavigation disabled</string>
    <string name="js_engine_flags" translatable="false">Set JS flags</string>
    <string name="pref_accessibility_title">Accessibility</string>
    <string name="pref_font_size_category">Text size</string>
    <string name="pref_lab_fullscreen">Immersive</string>
    <string name="pref_lab_fullscreen_summary">
      Make the browser fullscreen</string>
    <string name="webstorage_clear_data_title">Storage</string>
    <string name="webstorage_private_data_title">Private data</string>
    <string name="preview">Preview</string>
    <string name="pref_download_path_setting_screen_title">Custom download path</string>
</resources>